--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </style>
 </head>
 <body>
-  <canvas id="gameCanvas" width="800" height="800"></canvas>
+  <canvas id="gameCanvas" width=window.innerWidth height=window.innerHeight></canvas>
 
   <script>
     const canvas = document.getElementById("gameCanvas");
